--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="shortcut icon" href="imagenes/logo.png">
-    <link rel="stylesheet" href="animaciones.css">
-    <link rel="stylesheet" href="style-index.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="shortcut icon" href="assets/img/logo.png">
+    <link rel="stylesheet" href="assets/css/animaciones.css">
+    <link rel="stylesheet" href="assets/css/style-index.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="assets/jscript/script.js"></script>
     <title>Barberia</title>
 </head>
 <body>
     <header id="header">
-        <h1><img src="imagenes/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
+        <h1><img src="assets/img/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
         <h1 class="texto-titulo" id="texto-titulo">Alura Barbery</h1>
         <nav class="menu-header">
              <ul class="menu" id="menu">
@@ -32,7 +32,7 @@
         <div class="info-page centralizar">
            <h1>Sobre nosotros</h1>
                 <article class="sobre-nosotros">
-                    <img class="img-sn" src="imagenes/barberia-trabajo.png" alt="">
+                    <img class="img-sn" src="assets/img/barberia-trabajo.png" alt="">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi eveniet alias dolores repudiandae delectus error obcaecati ab explicabo dolorem aliquid qui maxime consectetur ea, magnam neque architecto tempore voluptatibus. Eius.</p>
                     <p><b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae dolores assumenda rerum corrupti quasi praesentium aut quis est pariatur at ut temporibus maxime quaerat</b>, facilis porro possimus laborum in illum?</p>
                     <p><b>Lorem ipsum dolor sit amet consectetur</b>, adipisicing elit. Consequatur blanditiis accusamus provident praesentium autem accusantium perferendis molestiae libero? Inventore laborum vitae quis quaerat. Ex nemo quo nihil fugit saepe sit?</p>
@@ -56,7 +56,7 @@
                     <li>Profesionales calificados</li>
                     <li>Puntualidad</li>
                     <li>Limpieza</li>
-                </ul><img src="imagenes/corte-barba.jpg" alt="Imagen base de barberia" class="imagen-diferenciales" id="imagen-diferenciales">
+                </ul><img src="assets/img/corte-barba.jpg" alt="Imagen base de barberia" class="imagen-diferenciales" id="imagen-diferenciales">
             </div>
         </section>
         <article class="centralizar">
@@ -66,7 +66,7 @@
      
 </body>
 <footer>
-    <img src="imagenes/logo-blanco.png" alt="">
+    <img src="assets/img/logo-blanco.png" alt="">
     <p class="copyright">©Copyright Barberia Alura - 2022</p>
 </footer>
 </html>
