--- a/products.html
+++ b/products.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="shortcut icon" href="imagenes/logo.png">
-    <link rel="stylesheet" href="animaciones.css">
-    <link rel="stylesheet" href="style-products.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="shortcut icon" href="assets/img/logo.png">
+    <link rel="stylesheet" href="assets/css/animaciones.css">
+    <link rel="stylesheet" href="assets/css/style-products.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="assets/jscript/script.js"></script>
 </head>
 <body>
-    <header id="header"><h1><img src="imagenes/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
+    <header id="header"><h1><img src="assets/img/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
         <nav>
              <ul class="menu" id="menu">
                  <button class="btn-animado" id="btn"><li class="navegacion"><a href="index.html" target="">Home</a></li></button>
@@ -25,15 +25,15 @@
      </header>
         <section class="products">
             <article class="box cabello" onclick="displayOn()">
-                    <img src="imagenes/corte-cabello.jpg" alt="">
+                    <img src="assets/img/corte-cabello.jpg" alt="">
                     <h4>Productos para el cabello</h4>
             </article>
             <article class="box barba" onclick="displayOn2()">
-                <img src="imagenes/corte-barba2.jpg" alt="">
+                <img src="assets/img/corte-barba2.jpg" alt="">
                 <h4>Productos para la barba</h4>
             </article>
             <article class="box color" onclick="displayOn3()">
-                <img src="imagenes/merchandising.jpg" alt="">
+                <img src="assets/img/merchandising.jpg" alt="">
                 <h4>Nuestro merchandising.</h4>
             </article>
         </section>
@@ -102,7 +102,7 @@
 
     </body>
     <footer>
-        <img src="imagenes/logo-blanco.png" alt="">
+        <img src="assets/img/logo-blanco.png" alt="">
         <p class="copyright">©Copyright Barberia Alura - 2022</p>
     </footer>
 </html>
