--- a/contacto.html
+++ b/contacto.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="shortcut icon" href="imagenes/logo.png">
-    <link rel="stylesheet" href="style-contacto.css">
-    <link rel="stylesheet" href="animaciones.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="shortcut icon" href="assets/img/logo.png">
+    <link rel="stylesheet" href="assets/css/style-contacto.css">
+    <link rel="stylesheet" href="assets/css/animaciones.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="assets/jscript/script.js"></script>
 </head>
 <body>
-    <header id="header"><h1><img src="imagenes/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
+    <header id="header"><h1><img src="assets/img/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
         <nav>
              <ul class="menu" id="menu">
                  <button class="btn-animado" id="btn"><li class="navegacion"><a href="index.html" target="">Home</a></li></button>
@@ -107,7 +107,7 @@
     </main>
 </body>
 <footer>
-    <img src="imagenes/logo-blanco.png" alt="">
+    <img src="assets/img/logo-blanco.png" alt="">
     <p class="copyright">©Copyright Barberia Alura - 2022</p>
 </footer>
 </html>
