scrollbar style and before animated on products.

--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
             </article>
             <article class="box color" onclick="displayOn3()">
                 <img src="assets/img/merchandising.jpg" alt="">
-                <h4>Nuestro merchandising.</h4>
+                <h4>Nuestro merchandising</h4>
             </article>
         </section>
         <section class="products-seccion">
