Arreglo de texto en productos $Cera to Cera

--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
                             <td>$1100</td>
                         </tr>
                         <tr>
-                            <td>$Cera</td>
+                            <td>Cera</td>
                             <td>$950</td>
                         </tr>
                     </th>
