--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header id="header">
         <h1><img src="assets/img/logo-blanco.png" class="logo" alt="Logo titulo"></h1>
-        <h1 class="texto-titulo" id="texto-titulo">Alura Barbery</h1>
+        <h1 class="texto-titulo" id="texto-titulo">Alura Barber</h1>
         <nav class="menu-header">
              <ul class="menu" id="menu">
                  <button class="btn-animado" id="btn"><li class="navegacion"><a href="index.html" target="">Home</a></li></button>
@@ -26,7 +26,7 @@
          </nav>
      </header>
      <div class="banner">
-         <h1>Alura Barbery</h1>
+         <h1>Alura Barber</h1>
      </div>
      <main>
         <div class="info-page centralizar">
