--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,7 @@
             <input type="tel" class="input-text" id="phone" placeholder="(XXX) XXX XXXXXXX" required>
             <input class="btn"type="submit">
 
-            <label for="mensaje">Mensaje</label>
+            <label for="mensaje">Dejanos un mensaje</label>
             <textarea name="Mensaje" id="mensaje" cols="60" rows="10"></textarea>
             
             <fieldset> <!--Fieldsed se utiliza para agrupar cosas dentro del elemento que hagan referencia a lo mismo, reemplaza en este caso particular a un div-->
